# kmeansn

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: schema.md
examples/: data.csv  data.ndjson
src/: lib.rs  main.rs
src/algo/: distance.rs  kmeans.rs  mod.rs  neighbors.rs
src/cli/: args.rs  mod.rs
src/commands/: assign.rs  cluster_neighbors.rs  fit.rs  mod.rs
src/io/: centroids_json.rs  csv.rs  format.rs  mod.rs  ndjson.rs  reader.rs
src/model/: centroid.rs  dataset.rs  mod.rs  point.rs
src/output/: assign.rs  mod.rs  neighbors.rs
tests/: cli.rs
